--- a/playerPlayer/Base.lproj/Main.storyboard
+++ b/playerPlayer/Base.lproj/Main.storyboard
@@ -42,42 +42,20 @@
                                     <barButtonItem title="Share" id="6QZ-vg-LiZ"/>
                                 </items>
                             </toolbar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3KU-6h-UaJ">
-                                <rect key="frame" x="72" y="485" width="30" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rmj-tH-kzr">
+                                <rect key="frame" x="151" y="458" width="94" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Play"/>
+                                <state key="normal" title="Button" image="play.png"/>
                                 <connections>
-                                    <action selector="play:" destination="BYZ-38-t0r" eventType="touchDown" id="wKA-cM-ieX"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0j-QC-0YW">
-                                <rect key="frame" x="186" y="502" width="32" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Stop"/>
-                                <connections>
-                                    <action selector="stop:" destination="BYZ-38-t0r" eventType="touchDown" id="yk0-0i-1SO"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJM-wq-Mee">
-                                <rect key="frame" x="120" y="440" width="134" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Rewind 20 seconds"/>
-                                <connections>
-                                    <action selector="rewind:" destination="BYZ-38-t0r" eventType="touchDown" id="HXL-cw-kKS"/>
-                                    <action selector="stop:" destination="BYZ-38-t0r" eventType="touchDown" id="MCG-F8-kjC"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwY-95-4xC">
-                                <rect key="frame" x="121" y="555" width="32" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Next"/>
-                                <connections>
-                                    <action selector="next:" destination="BYZ-38-t0r" eventType="touchDown" id="QsR-g0-UEY"/>
+                                    <action selector="playPauseB:" destination="BYZ-38-t0r" eventType="touchDown" id="vFR-vR-2jm"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="playPauseButton" destination="rmj-tH-kzr" id="UiP-wy-ie0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -85,6 +63,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="play.png" width="100" height="100"/>
         <image name="what.png" width="480" height="383"/>
     </resources>
 </document>
