--- a/playerPlayer/Base.lproj/Main.storyboard
+++ b/playerPlayer/Base.lproj/Main.storyboard
@@ -58,6 +58,14 @@
                                     <action selector="oneSpeedTwoSpeed:" destination="BYZ-38-t0r" eventType="touchDown" id="4S1-K8-R14"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fi1-V5-k9b">
+                                <rect key="frame" x="30" y="458" width="105" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="rewind.png"/>
+                                <connections>
+                                    <action selector="rewindBy20Seconds:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e6r-i6-GLu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -74,6 +82,7 @@
     <resources>
         <image name="1x.png" width="100" height="100"/>
         <image name="play.png" width="100" height="100"/>
+        <image name="rewind.png" width="100" height="100"/>
         <image name="what.png" width="480" height="383"/>
     </resources>
 </document>
