--- a/playerPlayer/Base.lproj/Main.storyboard
+++ b/playerPlayer/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="play.png"/>
                                 <connections>
-                                    <action selector="playPauseB:" destination="BYZ-38-t0r" eventType="touchDown" id="vFR-vR-2jm"/>
+                                    <action selector="playPause:" destination="BYZ-38-t0r" eventType="touchDown" id="RJ4-Or-vYf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e9W-Y8-JCd">
@@ -90,7 +90,7 @@
                     <connections>
                         <outlet property="oneSpeedTwoSpeedButton" destination="e9W-Y8-JCd" id="zpV-WL-Dn1"/>
                         <outlet property="playPauseButton" destination="rmj-tH-kzr" id="UiP-wy-ie0"/>
-                        <outlet property="slider" destination="ozk-dD-R2a" id="2lg-fz-GRE"/>
+                        <outlet property="slider" destination="ozk-dD-R2a" id="DBI-Wf-oZC"/>
                         <outlet property="timeElapsed" destination="vH9-lZ-em3" id="0Ky-hO-Iy3"/>
                         <outlet property="totalTime" destination="osR-Pi-DaV" id="tRm-hx-egb"/>
                     </connections>
