--- a/playerPlayer/Base.lproj/Main.storyboard
+++ b/playerPlayer/Base.lproj/Main.storyboard
@@ -21,9 +21,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T1t-Th-TVF">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T1t-Th-TVF">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="CsZ-lu-yfD"/>
+                                    <constraint firstAttribute="width" constant="375" id="cyV-BA-Lg2"/>
+                                </constraints>
                                 <textAttributes key="titleTextAttributes">
                                     <offsetWrapper key="textShadowOffset" horizontal="0.0" vertical="0.0"/>
                                 </textAttributes>
@@ -31,10 +34,6 @@
                                     <navigationItem title="Audio Title" id="AZt-R7-aCE"/>
                                 </items>
                             </navigationBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="what.png" translatesAutoresizingMaskIntoConstraints="NO" id="wy3-cH-bLs">
-                                <rect key="frame" x="0.0" y="44" width="375" height="450"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UkD-Jw-c6Z">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -87,10 +86,26 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="what.png" translatesAutoresizingMaskIntoConstraints="NO" id="wy3-cH-bLs">
+                                <rect key="frame" x="0.0" y="64" width="375" height="312"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="312" id="obG-o6-zSC"/>
+                                    <constraint firstAttribute="width" constant="375" id="vtp-fe-FxT"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="T1t-Th-TVF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="A55-d3-4jN"/>
+                            <constraint firstItem="T1t-Th-TVF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="CQ8-Cd-Uw7"/>
+                            <constraint firstAttribute="trailing" secondItem="wy3-cH-bLs" secondAttribute="trailing" id="HZm-gB-Ddi"/>
+                            <constraint firstAttribute="trailing" secondItem="T1t-Th-TVF" secondAttribute="trailing" id="dpS-4d-prF"/>
+                            <constraint firstItem="wy3-cH-bLs" firstAttribute="top" secondItem="T1t-Th-TVF" secondAttribute="bottom" id="eY2-Pg-gAf"/>
+                            <constraint firstItem="wy3-cH-bLs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="oD9-Ge-zUH"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="imageView" destination="wy3-cH-bLs" id="BJY-Ds-g6t"/>
                         <outlet property="oneSpeedTwoSpeedButton" destination="e9W-Y8-JCd" id="zpV-WL-Dn1"/>
                         <outlet property="playPauseButton" destination="rmj-tH-kzr" id="UiP-wy-ie0"/>
                         <outlet property="slider" destination="ozk-dD-R2a" id="DBI-Wf-oZC"/>
